--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "wordle",
+  "author": "Ezra Celli <ezra@ezracelli.com>",
   "version": "0.0.0-alpha.1",
   "scripts": {
     "build": "vite build",
-    "postinstall": "patch-package",
     "start": "vite start",
     "start:dev": "vite dev"
   },
-  "author": "Ezra Celli <ezra@ezracelli.com>",
   "dependencies": {
     "@stdlib/random-base-mt19937": "^0.0.5",
     "classnames": "^2.3.1",
@@ -18,11 +17,11 @@
   "devDependencies": {
     "@preact/preset-vite": "^2.1.7",
     "@redux-devtools/extension": "^3.2.1",
+    "@types/connect": "^3.4.35",
     "@types/node": "^17.0.13",
-    "patch-package": "^6.4.7",
+    "connect": "^3.7.0",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5",
-    "vite": "^2.7.13",
-    "vite-plugin-mix": "^0.3.1"
+    "vite": "^2.7.13"
   }
 }
