--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,5 @@
-# top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
 [*]
 charset = utf-8
 end_of_line = lf
@@ -10,10 +8,7 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.yml]
-indent_size = 2
-
-[package.json]
+[*.{json,yml}]
 indent_size = 2
 
 [*.{diff,md}]
