--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
   "name": "wordle",
   "author": "Ezra Celli <ezra@ezracelli.com>",
-  "version": "0.0.0-alpha.1",
+  "license": "MIT",
   "scripts": {
-    "build": "vite build",
-    "start": "vite start",
-    "start:dev": "vite dev"
+    "postinstall": "patch-package"
   },
   "dependencies": {
-    "@stdlib/random-base-mt19937": "^0.0.5",
+    "@reduxjs/toolkit": "^1.8.0",
     "classnames": "^2.3.1",
+    "mersenne-twister": "^1.1.0",
     "open-color": "^1.9.1",
-    "preact": "^10.6.5",
-    "redux": "^4.1.2"
+    "react": "^18.0.0-rc.2",
+    "react-dom": "^18.0.0-rc.2",
+    "react-redux": "^8.0.0-beta.3",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
+    "reselect": "^4.1.5"
   },
   "devDependencies": {
-    "@preact/preset-vite": "^2.1.7",
-    "@redux-devtools/extension": "^3.2.1",
-    "@types/connect": "^3.4.35",
-    "@types/node": "^17.0.13",
-    "connect": "^3.7.0",
+    "@types/mersenne-twister": "^1.1.2",
+    "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.13",
+    "@vercel/node": "^1.13.0",
+    "@vitejs/plugin-react": "^1.2.0",
+    "patch-package": "^6.4.7",
     "prettier": "^2.5.1",
-    "typescript": "^4.5.5",
-    "vite": "^2.7.13"
+    "typescript": "^4.6.2",
+    "vercel": "^24.0.0",
+    "vite": "^2.8.6"
   }
 }
